plocate 1.1.7, November 21st, 2022

  - Return 1 if no matches were found. Patch by Clément Pit-Claudel.

  - Various portability patches, thanks to Maciej Adamczyk,
    Alfred Persson Forsberg, and the Alpine Linux packaging.


plocate 1.1.16, June 4th, 2022

  - Various bugfixes.


plocate 1.1.15, January 31st, 2022

  - Various bugfixes.


plocate 1.1.14, December 27th, 2021

  - Add an option --add-single-prunepath.
    
    This makes it possible to prune a path with spaces in the file name,
    which was previously impossible.

  - Documentation updates.


plocate 1.1.13, November 6th, 2021

  - Various bugfixes.


plocate 1.1.12, October 5th, 2021

  - Implement the -N/--literal option. This matches the GNU coreutils option
    to turn off the automatic quoting of special characters when printing to
    a tty.

  - Various bugfixes, including from Arsen Arsenović.


plocate 1.1.11, September 5th, 2021

  - Fix a crash with --existing if scanning all blocks
    (ie., very short patterns, or --regex), by turning off
    asynchronous stat() in this case. Reported by Michael Arndt.


plocate 1.1.10, August 23rd, 2021

  - Various bugfixes, including from the Void Linux repository
    and from Arsen Arsenović.


plocate 1.1.9, August 18th, 2021

  - Support the -e (--existing) option from mlocate.

  - Make it possible to set systemunitdir explicitly.
    Based on a patch by Zbigniew Jędrzejewski-Szmek.


plocate 1.1.8, June 12th, 2021

  - Various bugfixes.


plocate 1.1.7, April 7th, 2021

  - Correct randomization of updatedb systemd unit start time.
    Patch by Vladimir Lomov.


plocate 1.1.6, April 2nd, 2021

  - Support searching multiple plocate databases, including the LOCATE_PATH
    environment variable. See the plocate(1) man page for more information.

  - Fix an issue where updatedb would not recurse into directories on
    certain filesystems, in particular the deprecated XFS V4.
